--- a/src/pages/UsagePage.module.scss
+++ b/src/pages/UsagePage.module.scss
@@ -4,6 +4,7 @@
 .container {
   width: 100%;
   min-height: 100%;
+  flex: 1;
   display: flex;
   flex-direction: column;
   gap: 20px;
